--- a/src/xmlbeansxx/CMakeLists.txt
+++ b/src/xmlbeansxx/CMakeLists.txt
@@ -4,31 +4,40 @@
 
 XMLBEANSXX_GEN(xml-fragment.xsd xml-fragment.cpp xml-fragment.h)
 
+
 #make a config file
+XMLBEANSXX_COPY(config_auto.h.default config_auto.h)
+SET(XMLBEANSXX_EXTRA_INCLUDE_DIRS "")
+SET(XMLBEANSXX_OPTIONAL_LIBS "")
+
 IF (LIBXML2_FOUND) 
-	ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/config_auto.h
-		COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/config.h.default ${CMAKE_CURRENT_BINARY_DIR}/config_auto.h
-	)
-	SET(LIBXML2_LIB ${LIBXML2_LIBRARIES})
+	XMLBEANSXX_COPY(configLibxml2.h.yes configLibxml2.h)
+	SET(XMLBEANSXX_OPTIONAL_LIBS  ${XMLBEANSXX_OPTIONAL_LIBS} ${LIBXML2_LIBRARIES})
 	SET(PARSERS_H   LibXMLParser.h   XercesParser.h)
 	SET(PARSERS_CPP LibXMLParser.cpp XercesParser.cpp)
 ELSE (LIBXML2_FOUND) 
-	ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/config_auto.h
-		COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/config.h.noLibxml2 ${CMAKE_CURRENT_BINARY_DIR}/config_auto.h
-	)
-	SET(LIBXML2_LIB "")
+	XMLBEANSXX_COPY(configLibxml2.h.no configLibxml2.h)
 	SET(PARSERS_H   XercesParser.h)
 	SET(PARSERS_CPP XercesParser.cpp)
 ENDIF (LIBXML2_FOUND) 
 
 
 IF (GMPXX_FOUND)
-	XMLBEANSXX_COPY(CoreTypes.h.gmpxx  CoreTypes.h)
-	SET(NUM_LIBRARY ${GMP_LIBRARY} ${GMPXX_LIBRARY})
+	XMLBEANSXX_COPY(configGmpxx.h.yes  configGmpxx.h)
+	SET(XMLBEANSXX_OPTIONAL_LIBS  ${XMLBEANSXX_OPTIONAL_LIBS}  ${GMP_LIBRARY} ${GMPXX_LIBRARY})
 ELSE (GMPXX_FOUND)
-	XMLBEANSXX_COPY(CoreTypes.h.no_gmpxx  CoreTypes.h)
-	SET(NUM_LIBRARY "")
+	XMLBEANSXX_COPY(configGmpxx.h.no  configGmpxx.h)
 ENDIF (GMPXX_FOUND)
+
+
+IF (LIBXML2_FOUND)
+	XMLBEANSXX_COPY(configLog4cxx.h.yes configLog4cxx.h)
+	SET(XMLBEANSXX_EXTRA_INCLUDE_DIRS ${XMLBEANSXX_EXTRA_INCLUDE_DIRS} ${LIBXML2_INCLUDE_DIR})
+	SET(XMLBEANSXX_OPTIONAL_LIBS  ${XMLBEANSXX_OPTIONAL_LIBS}  ${LOG4CXX_LIBRARY})
+ELSE (LIBXML2_FOUND)
+	XMLBEANSXX_COPY(configLog4cxx.h.no  configLog4cxx.h)
+ENDIF (LIBXML2_FOUND)
+
 
 
 SET(XMLBEANSXX_INSTALL_HEADERS 
@@ -138,6 +147,7 @@ INCLUDE_DIRECTORIES(
 	${CMAKE_CURRENT_SOURCE_DIR}
 	${CMAKE_CURRENT_BINARY_DIR}/..
 	${CMAKE_CURRENT_SOURCE_DIR}/..
+	${XMLBEANSXX_EXTRA_INCLUDE_DIRS}
 )
 
 
@@ -150,7 +160,7 @@ ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/XmlTypesGen.h ${CMAKE_CURR
 
 #ADD_LIBRARY (${XMLBEANSXX_LIB} SHARED ${XMLBEANSXX_SRC})
 ADD_LIBRARY (${XMLBEANSXX_LIB} STATIC ${XMLBEANSXX_SRC})
-TARGET_LINK_LIBRARIES (${XMLBEANSXX_LIB} ${XERCES_LIBRARY} ${BOOST_DATE_TIME_LIBRARY} ${LOG4CXX_LIBRARY} ${NUM_LIBRARY} ${BOOST_THREAD_LIBRARY} ${LIBXML2_LIB})
+TARGET_LINK_LIBRARIES (${XMLBEANSXX_LIB} ${XERCES_LIBRARY} ${BOOST_DATE_TIME_LIBRARY} ${BOOST_THREAD_LIBRARY} ${XMLBEANSXX_OPTIONAL_LIBS})
 SET_TARGET_PROPERTIES (${XMLBEANSXX_LIB} PROPERTIES SOVERSION ${XMLBEANSXX_SOVERSION})
 
 SET(INCLUDE_INSTALL_DIR  "${CMAKE_INSTALL_PREFIX}/include")
