--- a/src/xmlbeansxx/CMakeLists.txt
+++ b/src/xmlbeansxx/CMakeLists.txt
@@ -32,7 +32,7 @@ ENDIF (GMPXX_FOUND)
 
 IF (LOG4CXX_FOUND)
 	XMLBEANSXX_COPY(configLog4cxx.h.yes configLog4cxx.h)
-	SET(XMLBEANSXX_EXTRA_INCLUDE_DIRS ${XMLBEANSXX_EXTRA_INCLUDE_DIRS} ${LIBXML2_INCLUDE_DIR})
+	SET(XMLBEANSXX_EXTRA_INCLUDE_DIRS ${XMLBEANSXX_EXTRA_INCLUDE_DIRS} ${LOG4CXX_INCLUDE_DIR})
 	SET(XMLBEANSXX_OPTIONAL_LIBS  ${XMLBEANSXX_OPTIONAL_LIBS}  ${LOG4CXX_LIBRARY})
 ELSE (LOG4CXX_FOUND)
 	XMLBEANSXX_COPY(configLog4cxx.h.no  configLog4cxx.h)
