--- a/src/xmlbeansxx/CMakeLists.txt
+++ b/src/xmlbeansxx/CMakeLists.txt
@@ -13,6 +13,7 @@ SET(XMLBEANSXX_OPTIONAL_LIBS "")
 IF (LIBXML2_FOUND) 
 	XMLBEANSXX_COPY(configLibxml2.h.yes configLibxml2.h)
 	SET(XMLBEANSXX_OPTIONAL_LIBS  ${XMLBEANSXX_OPTIONAL_LIBS} ${LIBXML2_LIBRARIES})
+	SET(XMLBEANSXX_EXTRA_INCLUDE_DIRS ${XMLBEANSXX_EXTRA_INCLUDE_DIRS} ${LIBXML2_INCLUDE_DIR})
 	SET(PARSERS_H   LibXMLParser.h   XercesParser.h)
 	SET(PARSERS_CPP LibXMLParser.cpp XercesParser.cpp)
 ELSE (LIBXML2_FOUND) 
