--- a/src/xmlbeansxx/CMakeLists.txt
+++ b/src/xmlbeansxx/CMakeLists.txt
@@ -165,7 +165,10 @@ ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/XmlTypesGen.h ${CMAKE_CURR
 
 #ADD_LIBRARY (${XMLBEANSXX_LIB} SHARED ${XMLBEANSXX_SRC})
 ADD_LIBRARY (${XMLBEANSXX_LIB} STATIC ${XMLBEANSXX_SRC})
-TARGET_LINK_LIBRARIES (${XMLBEANSXX_LIB} ${XERCES_LIBRARY} ${BOOST_DATE_TIME_LIBRARY} ${BOOST_THREAD_LIBRARY} ${XMLBEANSXX_OPTIONAL_LIBS})
+
+#rr: removed library deps, deps for static libs should be set up during exe linking
+#TARGET_LINK_LIBRARIES (${XMLBEANSXX_LIB} ${XERCES_LIBRARY} ${BOOST_DATE_TIME_LIBRARY} ${BOOST_THREAD_LIBRARY} ${XMLBEANSXX_OPTIONAL_LIBS})
+
 SET_TARGET_PROPERTIES (${XMLBEANSXX_LIB} PROPERTIES SOVERSION ${XMLBEANSXX_SOVERSION})
 
 SET(INCLUDE_INSTALL_DIR  "${CMAKE_INSTALL_PREFIX}/include")
