--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
 
 PROJECT (xmlbeansxx)
 
-SET(XMLBEANSXX_VERSION 0.8.8)
-SET(XMLBEANSXX_SOVERSION 1.0.7)
+SET(XMLBEANSXX_VERSION 0.9.3)
+SET(XMLBEANSXX_SOVERSION 4.0.2)
 
 
 INCLUDE(CPack)
@@ -28,10 +28,12 @@ ENDIF(MSVC80)
 FIND_PACKAGE(Log4cxx REQUIRED)
 FIND_PACKAGE(Boost REQUIRED)
 FIND_PACKAGE(Xerces REQUIRED)
-IF(!WITHOUT_GMP)
+FIND_PACKAGE(Mvn REQUIRED)
+
+IF(NOT WITHOUT_GMP)
     FIND_PACKAGE(Gmp)
     FIND_PACKAGE(Gmpxx)
-ENDIF(!WITHOUT_GMP)
+ENDIF(NOT WITHOUT_GMP)
 
 FIND_PACKAGE(CppUnit)
 FIND_PACKAGE(LibXml2)
