--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,15 +1,38 @@
 
 
+SET(XMLBEANSXX_OPTIONAL_LIBS "")
+SET(XMLBEANSXX_EXTRA_INCLUDE_DIRS "")
 
-#ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/log4j.xml
-#	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/log4j.xml.default ${CMAKE_CURRENT_BINARY_DIR}/log4j.xml
-#)
+
+IF (LIBXML2_FOUND) 
+	SET(XMLBEANSXX_OPTIONAL_LIBS  ${XMLBEANSXX_OPTIONAL_LIBS} ${LIBXML2_LIBRARIES})
+	SET(XMLBEANSXX_EXTRA_INCLUDE_DIRS ${XMLBEANSXX_EXTRA_INCLUDE_DIRS} ${LIBXML2_INCLUDE_DIR})
+ENDIF (LIBXML2_FOUND) 
+
+IF (GMPXX_FOUND)
+	SET(XMLBEANSXX_OPTIONAL_LIBS  ${XMLBEANSXX_OPTIONAL_LIBS}  ${GMP_LIBRARY} ${GMPXX_LIBRARY})
+ENDIF (GMPXX_FOUND)
+
+
+IF (LOG4CXX_FOUND)
+	SET(XMLBEANSXX_OPTIONAL_LIBS  ${XMLBEANSXX_OPTIONAL_LIBS}  ${LOG4CXX_LIBRARY})
+ENDIF (LOG4CXX_FOUND)
+
+
+
 
 
 SET(TEST_LIBS
 	${XMLBEANSXX_LIB}
+	${XERCES_LIBRARY} 
+	${BOOST_DATE_TIME_LIBRARY} 
+	${BOOST_THREAD_LIBRARY} 
 	${CPPUNIT_LIBRARY}
+	
+	${XMLBEANSXX_OPTIONAL_LIBS}
 )
+
+
 
 SET(TEST_PROGS
 	BeansTest
@@ -21,6 +44,7 @@ SET(TEST_PROGS
 	EnumTest
 	XPathTest
 	EntitiesTest
+	XmlCursorTest
 )
 
 
@@ -32,6 +56,7 @@ include_directories(
 	${PROJECT_SOURCE_DIR}/src
 	${PROJECT_BINARY_DIR}/src/xmlbeansxx
 	${PROJECT_BINARY_DIR}/src
+	${XMLBEANSXX_EXTRA_INCLUDE_DIRS}
 )
 
 
@@ -46,20 +71,21 @@ XMLBEANSXX_COPY(entities.xml.default	entities.xml)
 SET(EXTRA_FILES ${log4j.xml_FILE} ${entities.xml_FILE})
 
 
-#ADD_EXECUTABLE(BeansTest	TestApp.cpp BeansTest.cpp	BeansTest.h 		${EXTRA_FILES}					)
-#ADD_EXECUTABLE(XmlArrayTest	TestApp.cpp XmlArrayTest.cpp	XmlArrayTest.h		${EXTRA_FILES}					)
-#ADD_EXECUTABLE(ArrayTest	TestApp.cpp ArrayTest.cpp	ArrayTest.h		${EXTRA_FILES}	${c.xsd_SRC}			)
-##ADD_EXECUTABLE(GenTest		TestApp.cpp GenTest.cpp		GenTest.h		${EXTRA_FILES}	${c.xsd_SRC} ${pawel.xsd_SRC}	)
-##ADD_EXECUTABLE(ParseTest	TestApp.cpp ParseTest.cpp 	ParseTest.h 		${EXTRA_FILES}	${c.xsd_SRC}			)
-##ADD_EXECUTABLE(UnqualTest	TestApp.cpp UnqualTest.cpp 	UnqualTest.h 		${EXTRA_FILES}	${unqual.xsd_SRC}		)
-#ADD_EXECUTABLE(EnumTest		TestApp.cpp EnumTest.cpp 	EnumTest.h		${EXTRA_FILES}	${pawel.xsd_SRC}		)
-#ADD_EXECUTABLE(XPathTest	TestApp.cpp XPathTest.cpp 	XPathTest.h		${EXTRA_FILES}	${pawel.xsd_SRC}		)
-#ADD_EXECUTABLE(EntitiesTest	TestApp.cpp EntitiesTest.cpp 	EntitiesTest.h		${EXTRA_FILES}	${entities.xsd_SRC}		)
+ADD_EXECUTABLE(BeansTest	TestApp.cpp BeansTest.cpp	BeansTest.h 		${EXTRA_FILES}					)
+ADD_EXECUTABLE(XmlArrayTest	TestApp.cpp XmlArrayTest.cpp	XmlArrayTest.h		${EXTRA_FILES}					)
+ADD_EXECUTABLE(ArrayTest	TestApp.cpp ArrayTest.cpp	ArrayTest.h		${EXTRA_FILES}	${c.xsd_SRC}			)
+#ADD_EXECUTABLE(GenTest		TestApp.cpp GenTest.cpp		GenTest.h		${EXTRA_FILES}	${c.xsd_SRC} ${pawel.xsd_SRC}	)
+#ADD_EXECUTABLE(ParseTest	TestApp.cpp ParseTest.cpp 	ParseTest.h 		${EXTRA_FILES}	${c.xsd_SRC}			)
+#ADD_EXECUTABLE(UnqualTest	TestApp.cpp UnqualTest.cpp 	UnqualTest.h 		${EXTRA_FILES}	${unqual.xsd_SRC}		)
+ADD_EXECUTABLE(EnumTest		TestApp.cpp EnumTest.cpp 	EnumTest.h		${EXTRA_FILES}	${pawel.xsd_SRC}		)
+ADD_EXECUTABLE(XPathTest	TestApp.cpp XPathTest.cpp 	XPathTest.h		${EXTRA_FILES}	${pawel.xsd_SRC}		)
+ADD_EXECUTABLE(EntitiesTest	TestApp.cpp EntitiesTest.cpp 	EntitiesTest.h		${EXTRA_FILES}	${entities.xsd_SRC}		)
+ADD_EXECUTABLE(XmlCursorTest	TestApp.cpp XmlCursorTest.cpp 	XmlCursorTest.h		${EXTRA_FILES}					)
 
 
 
-#FOREACH(P ${TEST_PROGS})
-#	TARGET_LINK_LIBRARIES(${P} ${TEST_LIBS})
-#	ADD_TEST("${P}_TEST" ${P})
-#ENDFOREACH(P)
+FOREACH(P ${TEST_PROGS})
+	TARGET_LINK_LIBRARIES(${P} ${TEST_LIBS})
+	ADD_TEST("${P}_TEST" ${P})
+ENDFOREACH(P)
 
