--- a/src/documentation/forrest.properties
+++ b/src/documentation/forrest.properties
@@ -24,8 +24,8 @@
 #project.name=my-project
 
 # Specifies name of Forrest skin to use
-project.skin=tigris
-#project.skin=pelt
+#project.skin=tigris
+project.skin=pelt
 
 # comma separated list, file:// is supported
 #forrest.skins.descriptors=http://forrest.apache.org/skins/skins.xml
