--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,6 @@ ENDIF(MSVC80)
 
   
 
-FIND_PACKAGE(Log4cxx REQUIRED)
 FIND_PACKAGE(Boost REQUIRED)
 FIND_PACKAGE(Xerces REQUIRED)
 FIND_PACKAGE(Mvn REQUIRED)
@@ -34,6 +33,11 @@ IF(NOT WITHOUT_GMP)
     FIND_PACKAGE(Gmp)
     FIND_PACKAGE(Gmpxx)
 ENDIF(NOT WITHOUT_GMP)
+
+IF(NOT WITHOUT_LOG4CXX)
+	FIND_PACKAGE(Log4cxx REQUIRED)
+ENDIF(NOT WITHOUT_LOG4CXX)
+
 
 FIND_PACKAGE(CppUnit)
 FIND_PACKAGE(LibXml2)
