--- a/cmake/Makefile.am
+++ b/cmake/Makefile.am
@@ -1,4 +1,4 @@
-#    Copyright 2004-2005 TouK s.c.
+#    Copyright 2004-2008 TouK sp. z o.o. s.k.a.
 #    
 #    Licensed under the Apache License, Version 2.0 (the "License");
 #    you may not use this file except in compliance with the License.
