--- a/examples/geoip/src/CMakeLists.txt
+++ b/examples/geoip/src/CMakeLists.txt
@@ -3,8 +3,11 @@ XMLBEANSXX_GEN(soapEnvelope.xsd soapEnvelope.cpp soapEnvelope.h)
 
 add_executable(geoip 
         geoip.cpp
+        HttpClient.cpp
+        WsClient.cpp
+        Exception.cpp
         ${geoip_xsd.xsd_SRC}
         ${soapEnvelope.xsd_SRC}
         )
-target_link_libraries(geoip ${BOOST_DATE_TIME_LIBRARY} ${BOOST_REGEX_LIBRARY} ${LOG4CXX_LIBRARY})
+target_link_libraries(geoip ${XERCES_LIBRARY} ${XMLBEANSXX_LIBRARY} ${CURL_LIBRARY} ${BOOST_THREAD_LIBRARY} ${BOOST_DATE_TIME_LIBRARY} ${LOG4CXX_LIBRARY})
 
