CMake 2.6 support + maven online option

--- a/generator/CMakeLists.txt
+++ b/generator/CMakeLists.txt
@@ -32,7 +32,7 @@ ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/pom.xml
 )
 
 ADD_CUSTOM_COMMAND(OUTPUT ${GEN_BINFILES} ${GEN_LIBFILES} ${GEN_JAR}
-	COMMAND ${MVN_PROG} -o -Dbase=${CMAKE_CURRENT_SOURCE_DIR} -Prelease package
+	COMMAND ${MVN_PROG} -Dbase=${CMAKE_CURRENT_SOURCE_DIR} -Prelease package
 	MAIN_DEPENDENCY ${CMAKE_CURRENT_BINARY_DIR}/pom.xml
 	DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/pom.xml
 )
