move to xmlbeans version 2.4.0

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,7 +40,7 @@ ENDIF(NOT WITHOUT_LOG4CXX)
 
 
 FIND_PACKAGE(CppUnit)
-FIND_PACKAGE(LibXml2)
+#FIND_PACKAGE(LibXml2)
 
 FIND_PACKAGE(XmlbeansxxInternal REQUIRED)
 
