--- a/generator/pom.xml
+++ b/generator/pom.xml
@@ -90,9 +90,9 @@
   
   <dependencies>
     <dependency>
-      <groupId>xmlbeans</groupId>
-      <artifactId>xbean</artifactId>
-      <version>1.0.4</version>
+    <groupId>org.apache.xmlbeans</groupId>
+    <artifactId>xmlbeans</artifactId>
+    <version>2.4.0</version>
     </dependency>
     <dependency>
       <groupId>commons-logging</groupId>
